UF-11782: Use dept44scheduler and fix api responsetypes
